--- a/src/PhoneMirror/Views/MainWindow.axaml
+++ b/src/PhoneMirror/Views/MainWindow.axaml
@@ -102,7 +102,7 @@
                 Padding="16"
                 Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
                 CornerRadius="8">
-            <Grid RowDefinitions="Auto,Auto,*,Auto">
+            <Grid RowDefinitions="Auto,Auto,Auto,*,Auto">
                 <!-- Device summary -->
                 <StackPanel Grid.Row="0"
                             Orientation="Vertical"
@@ -129,7 +129,7 @@
                 <!-- Mirror button - hero element -->
                 <Button Grid.Row="1"
                         Height="56"
-                        Margin="0,0,0,16"
+                        Margin="0,0,0,8"
                         Padding="12,0"
                         HorizontalAlignment="Stretch"
                         HorizontalContentAlignment="Center"
@@ -149,8 +149,29 @@
                     </StackPanel>
                 </Button>
 
+                <!-- Screenshot button - secondary action -->
+                <Button Grid.Row="2"
+                        Height="36"
+                        Margin="0,0,0,16"
+                        Padding="12,0"
+                        HorizontalAlignment="Stretch"
+                        HorizontalContentAlignment="Center"
+                        Command="{Binding ScreenshotCommand}"
+                        ToolTip.Tip="Capture screenshot to temp folder">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <TextBlock Text="&#xE722;"
+                                   FontFamily="{StaticResource SymbolThemeFontFamily}"
+                                   FontSize="14"
+                                   Margin="0,0,6,0"
+                                   VerticalAlignment="Center"/>
+                        <TextBlock Text="Screenshot"
+                                   FontSize="13"
+                                   VerticalAlignment="Center"/>
+                    </StackPanel>
+                </Button>
+
                 <!-- Settings section -->
-                <StackPanel Grid.Row="2"
+                <StackPanel Grid.Row="3"
                             Orientation="Vertical">
                     <TextBlock Text="SETTINGS"
                                FontSize="10"
@@ -186,7 +207,7 @@
                 </StackPanel>
 
                 <!-- Credits footer -->
-                <StackPanel Grid.Row="3"
+                <StackPanel Grid.Row="4"
                             Margin="0,16,0,0"
                             HorizontalAlignment="Right"
                             Orientation="Horizontal"
